# TreasureLooter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe.md  conanfile.py  main.cpp
game/: .luaurc  CMakeLists.txt  CMakePresets.json  compile_commands.json  main.cpp  project_path_generator.xml  vcpkg.json
game/3rdlibs/: CMakeLists.txt
game/3rdlibs/LuaBridge3/: CMakeLists.txt
game/3rdlibs/Mustache/: CMakeLists.txt
game/3rdlibs/RapidXML/: CMakeLists.txt
game/3rdlibs/SDL_ttf/: CMakeLists.txt  README.md
game/3rdlibs/angelscript/: CMakeLists.txt
game/3rdlibs/enet/: CMakeLists.txt  enet.cpp
game/3rdlibs/imgui/: CMakeLists.txt
game/3rdlibs/luau/: CMakeLists.txt
game/3rdlibs/optick/: CMakeLists.txt  optick.config.h
game/3rdlibs/protobuf/: CMakeLists.txt
game/3rdlibs/stb/: CMakeLists.txt  stb_truetype.cpp  stb_vorbis.cpp
game/3rdlibs/stduuid/: CMakeLists.txt
game/3rdlibs/uuid_v4/: CMakeLists.txt
game/assets/: assets.xml  fx_player.prefab.xml  scenes.xml
game/assets/gpa/: client_config.client_config.xml  common_config.common_config.xml  empty.level.xml  empty.scene.xml  game.level.xml  game.scene.xml  game_config.game_config.xml  generic_weapon.prefab.xml  icon.animation.xml  icon.physics_actor.xml  icon.prefab.xml  input_config.input_config.xml  object_definition_table.object_definition_table.xml  server_config.server_config.xml  status_walk_down.animation.xml  status_walk_left.animation.xml  status_walk_right.animation.xml  status_walk_up.animation.xml  test.level.xml  test_collision.level.xml  test_collision.scene.xml  test_tilemap.prefab.xml  tilemap.prefab.xml  tilemap_arch_layer.prefab.xml  tilemap_land_layer.prefab.xml  ui_test.level.xml  waggo.entity.xml  waggo.physics_actor.xml  waggo.prefab.xml  waggo2.entity.xml
game/assets/tilemap/: TilesetFloor.tsx  TilesetHouse.tsx  TilesetHouse_16_48.tsx  TilesetHouse_32x32.tsx  TilesetNature.tsx  test.json  test.tmx  test2.json  test2.tmx
game/client/: CMakeLists.txt  main.cpp
game/client/src/: animation_player.cpp  asset_manager.cpp  camera.cpp  context.cpp  controller.cpp  debug_drawer.cpp  dialog.cpp  draw.cpp  draw_order.cpp  enemy_state.cpp  font.cpp  image.cpp  logic.cpp  message_box.cpp  motor.cpp  renderer.cpp  scene.cpp  script_binding.cpp  serialize.cpp  sprite.cpp  tilemap_render_component.cpp  ui.cpp  window.cpp
game/client_entry/: CMakeLists.txt  client_main.cpp
game/cmake/: add_3rdlib.cmake  concat_defs.cmake  merge_luau_hint_incs.cmake  wrap_luau_hint_inc.cmake
game/common/: CMakeLists.txt
game/common/src/: animation.cpp  bind_point.cpp  cct.cpp  collision_group.cpp  context.cpp  entity.cpp  entity_name_manager.cpp  event.cpp  log.cpp  logic.cpp  math.cpp  physics.cpp  relationship.cpp  scene.cpp  serialize.cpp  static_collision.cpp  storage.cpp  tilemap.cpp  tilemap_layer_collision_component.cpp  timer.cpp  transform.cpp  trigger.cpp  type_index.cpp  utf8_string.cpp  uuid.cpp
game/editor/: asset_viewer.cpp  asset_viewer.hpp  common.cpp  common.hpp  context.cpp  context.hpp  editor.cpp  editor.hpp  inspector.cpp  inspector.hpp  instance_display.cpp  instance_display.hpp  main.cpp
game/engine/src/: animation.cpp  animation_player.cpp  asset_manager.cpp  bind_point.cpp  camera.cpp  cct.cpp  collision_group.cpp  context.cpp  controller.cpp  debug_drawer.cpp  dialog.cpp  draw.cpp  draw_order.cpp  enemy_state.cpp  entity.cpp  event.cpp  gameplay_config.cpp  image.cpp  imgui_id_generator.cpp  level.cpp  log.cpp  math.cpp  motor.cpp  (+21 more)
game/game_entry/: CMakeLists.txt
game/include/: animation.hpp  animation_player.hpp  asset.hpp  asset_manager.hpp  asset_manager_interface.hpp  bind_point.hpp  camera.hpp  cct.hpp  context.hpp  debug_drawer.hpp  dialog.hpp  enemy_state.hpp  entity.hpp  entity_logic.hpp  event.hpp  flag.hpp  gameobject.hpp  handle.hpp  image.hpp  imgui_id_generator.hpp  inspector.hpp  instance_display.hpp  level.hpp  log.hpp  macros.hpp  manager.hpp  math.hpp  motor.hpp  music.hpp  physics.hpp  prefab_manager.hpp  relationship.hpp  renderer.hpp  serialize.hpp  sprite.hpp  state_machine.hpp  storage.hpp  text.hpp  tilemap.hpp  timer.hpp  (+4 more)
game/luau-hint-support/: vscode-settings.json
game/main_entry/: game_main.cpp
game/protobuf/: test.proto
game/schema/: CMakeLists.txt  anim.xml  anim_player.xml  animation.xml  bind_point_schema.xml  collision_group.xml  common.xml  config.xml  flip.xml  input.xml  key.xml  level.xml  level_content.xml  motor_config.xml  physics.xml  prefab.xml  relationship.xml  sprite.xml  tilemap_schema.xml  timer_event.xml  transform.xml
game/schema_parser/: code_generate.cpp  code_generate.hpp  common.cpp  common.hpp  main.cpp  parse.cpp  parse.hpp
game/script/: TLBehavior.as  generic_forward_weapon.as  test.as  waggo.as
game/script_hint_inc/: tl_client_types.luau.inc  tl_common_types.luau.inc  tl_server_types.luau.inc  tl_types.luau.inc
game/scripts/: behavior.as  character.luau  character_behavior.luau  common.luau  component_display.luau  config.luau  context.luau  creation.luau  debug_panel.luau  game_entry.luau  generic_forward_weapon.luau  imgui_types.luau  item.luau  item_behavior.luau  player_behavior.luau  script_behavior.luau  slime.luau  test.luau  tl_types.luau  waggo.as  waggo.luau  weapon.luau  weapon_behavior.luau
game/server/: CMakeLists.txt  context.cpp  context.hpp  main.cpp
game/server_entry/: CMakeLists.txt  server_main.cpp
game/src/: animation.cpp  animation.hpp  animation_player.cpp  asset_table.cpp  asset_table.hpp  audio.cpp  audio.hpp  bind_point.cpp  camera.cpp  camera.hpp  cct.cpp  collision_group.cpp  common.cpp  common.hpp  context.cpp  context.hpp  debug_drawer.cpp  debugger.cpp  debugger.hpp  dialog.cpp  draw_list.cpp  draw_list.hpp  enemy_state.cpp  entity.cpp  event.cpp  event.hpp  flags.hpp  font.cpp  font.hpp  game_controller.cpp  game_controller.hpp  gameobject.cpp  gameobject.hpp  go_hierarchy_watcher.cpp  go_hierarchy_watcher.hpp  go_parser.cpp  go_parser.hpp  id.hpp  image.cpp  imgui_id_generator.cpp  (+48 more)
game/tool/: asset_fixer.py
game/tools/: CMakeLists.txt
(+721 files in other folders)
